# cmake-cpp-dependencies

./: .gitignore  Makefile  README.md
App/: CMakeLists.txt
App/src/: main.cpp
headerOnlyLib/: CMakeLists.txt
headerOnlyLib/cmake/: Config.cmake.in  Installing.cmake
headerOnlyLib/example/: CMakeLists.txt
headerOnlyLib/example/src/: demoLib.hpp  main.cpp
headerOnlyLib/include/: someLibShape.hpp
someLibA/: CMakeLists.txt
someLibA/cmake/: Config.cmake.in  Installing.cmake
someLibA/example/: CMakeLists.txt
someLibA/example/src/: main.cpp
someLibA/include/: someLibA.hpp
someLibA/src/: internalLib.cpp  internalLib.hpp  someLibA.cpp
someLibB/: CMakeLists.txt  Config.cmake.in
someLibB/cmake/: Config.cmake.in  Installing.cmake
someLibB/example/: CMakeLists.txt
someLibB/example/src/: main.cpp
someLibB/include/: someLibB.hpp
someLibB/src/: internalLib.cpp  internalLib.hpp  someLibB.cpp
someLibC/: CMakeLists.txt
someLibC/cmake/: Config.cmake.in  Installing.cmake
someLibC/example/: CMakeLists.txt
someLibC/example/src/: main.cpp
someLibC/include/: someLibC.hpp
someLibC/src/: someLibC.cpp
